@@ -218,6 +218,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17149: Fix random.vonmisesvariate to always return results in
+  [0, 2*math.pi].
+
 - Issue #1470548: XMLGenerator now works with binary output streams.
 
 - Issue #6975: os.path.realpath() now correctly resolves multiple nested
